--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@ body {
   font-family: 'Raleway', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* background-color: rgba(57, 55, 72, 0.22); */
 }
 
 code {
