finishing cart design

--- a/src/components/ui/Header.module.css
+++ b/src/components/ui/Header.module.css
@@ -172,7 +172,8 @@
   background-color: white;
   animation: growDown 500ms ease-in-out forwards;
   transform-origin: top center;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  z-index: 1;
 }
 
 .itemsContainer {
@@ -198,11 +199,11 @@
 .dropDownShoppingCartTitle {
   margin-top: 8px;
   margin-left: 16px;
-  width: 100%;
+  width: 80%;
   height: 26px;
   position: absolute;
   z-index: 1;
-  background-color:white;
+  background-color: white;
 
   font-family: Raleway;
   font-style: normal;
@@ -263,7 +264,7 @@
   transition-duration: 0.4s;
   cursor: pointer;
   background-color: white;
-  border: 1px solid #1D1F22;
+  border: 1px solid #1d1f22;
 
   color: black;
   font-family: Raleway;
@@ -310,30 +311,27 @@
   flex-direction: column;
   width: 130%;
   height: 100%;
-  justify-content: space-around
-
-
+  justify-content: space-around;
 }
 
 .buttonQuantity {
   display: flex;
   font-size: 20px;
-  background-color:white;
-  border: 1px solid #1D1F22;
+  background-color: white;
+  border: 1px solid #1d1f22;
   height: 24px;
   width: 24px;
   align-items: center;
-  justify-content:center;
+  justify-content: center;
   font-weight: lighter;
-
 }
 
-.buttonQuantity:hover{
-  background-color:rgb(204, 204, 204);
+.buttonQuantity:hover {
+  background-color: rgb(204, 204, 204);
 }
 
-.buttonQuantity:active{
-  background-color:rgb(236, 236, 236);
+.buttonQuantity:active {
+  background-color: rgb(236, 236, 236);
 }
 
 .itemQuantity {
@@ -348,11 +346,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
-    width: 190px;
+  width: 190px;
   height: 100%;
 }
 
-.image{
+.image {
   max-width: 100%;
   max-width: 100%;
 }
@@ -369,5 +367,4 @@
   font-weight: bold;
   font-size: 19px;
   line-height: 160%;
-  
 }
