--- a/src/pages/Cart.module.css
+++ b/src/pages/Cart.module.css
@@ -19,6 +19,9 @@
   justify-content: space-between;
   height: 250px;
   width: 100%;
+  align-items: baseline
+
+
 }
 
 .titlePriceAttributeContainer {
