--- a/src/pages/ProductPage.module.css
+++ b/src/pages/ProductPage.module.css
@@ -31,7 +31,9 @@
   width: 100%;
   display: flex;
   flex-direction: row;
-  margin: 100px 50px 0px 70px;
+  margin: 0 50px 0px 70px;
+  padding-top:100px;
+  min-height:100vh;
 }
 
 .productPhotosLeft {
